--- a/auction_back.html
+++ b/auction_back.html
@@ -17,7 +17,7 @@
     <div class="f8">背包</div>
     <div class="f1"></div>
 </header>
-<section >
+<section>
     <ul id="back_box">
         <!--<li class="pad-1 border-b-gray-5">
             <div class="flex flex-start-y">
@@ -64,6 +64,7 @@
 
 </body>
 <script>
+    init();
     (function(){
         data={};
         new AjaxRequest({
