--- a/auction_rule.html
+++ b/auction_rule.html
@@ -21,17 +21,17 @@
     <div class="pad-5-1 line-height-2">
         <p>1.参与商品竞拍需冻结该商品成交价相应的金额，竞拍成功的用户会直接扣除相应金额购买商品，
 
-            未竞拍成功的用户每轮竞拍结束后解冻金额。
+            未竞拍成功的用户每轮竞拍结束后解冻金额。<br>
 
-            2.竞拍时间为10秒，10秒过后会进行下一件商品的竞拍。
+            2.竞拍时间为10秒，10秒过后会进行下一件商品的竞拍。<br>
 
             3.竞拍加价：商品在起拍价上开始竞拍，用户每加价一次会增加加价的80%到账户余额，
 
-            用户可以进行单个商品的多次加价。（竞拍无需扣除用户冻结资金之外的余额）
+            用户可以进行单个商品的多次加价。（竞拍无需扣除用户冻结资金之外的余额）<br>
 
             4.竞拍成功：当用户竞拍加价时刚好拍到了商品的成交价格，该用户本轮冻结的金额将进行商品
 
-            的购买。如用户不想购买此商品可以选择回收商品，并得到该商品相应的回收价格。</p>
+            的购买。如用户不想购买此商品可以选择回收商品，并得到该商品起拍价相应的回收价格。</p>
     </div>
 </section>
 </body>
