--- a/auction_detail.html
+++ b/auction_detail.html
@@ -140,10 +140,17 @@
 
     <span class="yes_btn inline-block col-6 border-radius-30 pad-5 mar-t-2 color-yellow2">确定</span>
 </div>
+<div class="jingpai_box mask-box col-8 center none">
+    <div class="re">
+        <img src="img/jingpai_bg.png" alt="" width="100%">
+        <p class="ab l-b-0 col-10 pad-b-2 color-red">+ <span id="jingpai_money"></span></p>
+    </div>
+    <span class="yes_btn inline-block col-5 border-radius-30 pad-5 mar-t-1 color-yellow2">确定</span>
+</div>
 </body>
 <script src="js/swiper.min.js"></script>
 <script>
-    init();
+    // init();
     var swiper = new Swiper('.swiper-container', {
         loop : true,
         loopAdditionalSlides : 3,
@@ -256,6 +263,8 @@
                     $("#strike_price").text(res.data.goodsdata.strike_price/100);
                     $("#auction_btn").text(res.data.auction_money/100);
                     $("#get_money").text(res.data.auction_money/100);
+                    $("#jingpai_money").text(res.data.goodsdata.strike_price/100);
+
 
                     $(".swiper-wrapper .swiper-slide").css("background","url("+hostUrl1+res.data.goodsdata.goods_img+")");
 
@@ -369,19 +378,20 @@
             callBack: function(res){
                 console.log(res);
                 if(res.status==1){
-                    $(".mask").show();
-                    $(".canpai_box").show();
+
                     if(res.data.type==1){
-                        $("#canpai_head").text("恭喜获得参拍奖金");
-                        $("#putback").hide();
+                        $(".mask").show();
+                        $(".canpai_box").show();
+
                         $(".yes_btn").click(function(){
                             dialog_hide();
 
                         });
                     }
                     if(res.data.type==2){
-                        $("#canpai_head").text("恭喜竞拍成功");
-                        $("#putback").show();
+                        $(".mask").show();
+                        $(".jingpai_box").show();
+
                         $(".yes_btn").click(function(){
                             dialog_hide();
                             window.location.reload();
