--- a/auction_back.html
+++ b/auction_back.html
@@ -57,7 +57,7 @@
         </li>
     </ul>
     <div class="mar-t-1">
-        <span class="pad-5-2 border-radius-5 bg-gray2 mar-r-2">取消</span>
+        <span class="dialog_cancel pad-5-2 border-radius-5 bg-gray2 mar-r-2">取消</span>
         <span id="fahuo_btn" class="pad-5-2 border-radius-5 bg-blue color-white">发货</span>
     </div>
 </div>
