详情底部高度，支付跳转

--- a/auction_detail.html
+++ b/auction_detail.html
@@ -45,7 +45,7 @@
     <div class="f8">产品详情</div>
     <div class="f1"></div>
 </header>
-<section >
+<section>
     <!-- Swiper -->
     <div class="swiper-container swiper-no-swiping">
         <div class="swiper-wrapper">
@@ -125,10 +125,10 @@
 
     </ul>
 </section>
-<footer class="flex pad-l-r-1 f16">
-    <div id="canpai" class="color-white border-radius-30 mar-l-r-1 f3 pad-2-5">+ <span id="auction_btn">0</span> 立即参拍</div>
-    <div id="yue_btn" class="bg-gray2 color-black border-radius-30 mar-r-1 f1 pad-2-5">余额</div>
-</footer>
+<div class="fix col-10 l-b-0 bg-white border-t-gray flex pad-5-1 f16 center">
+    <div id="canpai" class="color-white border-radius-30 mar-l-r-1 f2 pad-5">+ <span id="auction_btn">0</span> 立即参拍</div>
+    <div id="yue_btn" class="bg-gray2 color-black border-radius-30 mar-r-1 f1 pad-5">余额</div>
+</div>
 
 <div class="mask none"></div>
 <div class="canpai_box mask-box col-9 pad-1 center none">
@@ -143,7 +143,7 @@
 <div class="jingpai_box mask-box col-8 center none">
     <div class="re">
         <img src="img/jingpai_bg.png" alt="" width="100%">
-        <p class="ab l-b-0 col-10 pad-b-2 color-red">+ <span id="jingpai_money"></span></p>
+        <p class="ab l-b-0 col-10 pad-b-2 color-red">￥ <span id="jingpai_money"></span></p>
     </div>
     <span class="yes_btn inline-block col-5 border-radius-30 pad-5 mar-t-1 color-yellow2">确定</span>
 </div>
