详情底部高度，支付跳转

--- a/pay.html
+++ b/pay.html
@@ -110,7 +110,7 @@
                     }
                     if(/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent)){
 
-                        window.callweb(res.data.url);
+                        callweb(res.data.url);
 
                     }
 
