竞拍价格修改

--- a/auction_detail.html
+++ b/auction_detail.html
@@ -134,7 +134,7 @@
 <div class="canpai_box mask-box col-9 pad-1 center none">
     <p id="canpai_head" class="pad-t-5 f16 color-yellow">恭喜获得参拍奖金</p>
     <div class="color-red bold col-6h">
-        <p class="flex f30">￥ <span id="get_money" class="f60">0</span></p>
+        <p class="flex f30">+ <span id="get_money" class="f60">0</span></p>
         <p id="putback" class="color-red none">拍中的产品将放入你的背包 <br/>可进行寄送</p>
     </div>
 
